tests/cases/compiler/invalidChar2/index.ts
var 𫠞_ = 12;
//~^ ERROR: Invalid character.